Pulses hardware test validated

--- a/src/overlay/EBB-PRU-xtarke.dts
+++ b/src/overlay/EBB-PRU-xtarke.dts
@@ -24,15 +24,15 @@
 
          pru_pru_pins: pinmux_pru_pru_pins {   // The PRU pin modes
             pinctrl-single,pins = <
-               0x1a4 0x05  // P9_27 pr1_pru0_pru_r30_5, MODE5 | OUTPUT | PRU
-               0x19c 0x26  // P9_28 pr1_pru0_pru_r31_3, MODE6 | OUTPUT | PRU
-               0x194 0x26  // P9_29 pr1_pru0_pru_r31_1, MODE6 | OUTPUT | PRU
-               0x198 0x05  // P9_30 pr1_pru0_pru_r30_2, MODE5 | OUTPUT | PRU
+               0x1a4 0x05  // P9_27 pr1_pru0_pru_r30_5, MODE5 | OUTPUT | PRU -> P9.27   PULSE_PIN_Z
+               0x19c 0x05  // P9_28 pr1_pru0_pru_r30_3, MODE5 | OUTPUT | PRU -> P9.28   CLOCKWISE_PIN_A
+               0x194 0x05  // P9_29 pr1_pru0_pru_r30_1, MODE5 | OUTPUT | PRU -> P9.30   CLOCKWISE_PIN_Z
+               0x198 0x05  // P9_30 pr1_pru0_pru_r30_2, MODE5 | OUTPUT | PRU -> P9.31   PULSE_PIN_A
             >;
          };
       };
    };
-
+   
    fragment@1 {         // Enable the PRUSS
       target = <&pruss>;
       __overlay__ {
